# Computer-graphics

lab06/: CMakeLists.txt
lab06/tests/: lighting_test.cpp  other_geometries_test.cpp  scene_graph_test.cpp  triangle_test.cpp
